// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column component should render correctly with alignSelf 1`] = `
<div
  className="sc-gswNZR cDeajb"
/>
`;

exports[`Column component should render correctly with each direction padding props 1`] = `
<div
  className="sc-gswNZR cEyshU"
/>
`;

exports[`Column component should render correctly with each side padding props 1`] = `
<div
  className="sc-gswNZR dpWRRh"
/>
`;

exports[`Column component should render correctly with global padding props 1`] = `
<div
  className="sc-gswNZR gFBMpQ"
/>
`;

exports[`Column component should render correctly with max width 1`] = `
<div
  className="sc-gswNZR jsjBpL"
/>
`;

exports[`Column component should render correctly with order props 1`] = `
<div
  className="sc-gswNZR VRGmx"
/>
`;

exports[`Column component should render correctly with some props 1`] = `
<div
  className="sc-gswNZR eMIBzb"
/>
`;

exports[`Column component should render correctly with textAlign 1`] = `
<div
  className="sc-gswNZR iZAWOY"
/>
`;

exports[`Column component should render correctly without props 1`] = `
<div
  className="sc-gswNZR eMIBzb"
/>
`;
